Change Chapter to Question

--- a/03-why-dfi.Rmd
+++ b/03-why-dfi.Rmd
@@ -4,4 +4,4 @@ Hu and Bentler’s approach to quantifying the degree of misspecification in a m
 
 DFI cutoffs are an improvement over the traditional fixed cutoff values because they address both of the issues raised above. DFI cutoffs are tailored to the user’s specific model, which alleviates the first problem of improper extrapolation. Researchers can think of DFI cutoffs as “if Hu and Bentler had used my exact model for their simulation study, these are the cutoff values that they would have published”. Unlike the traditional fixed cutoffs, DFI cutoffs (when available) are accurate for the user’s model and can reliably distinguish between a correctly specified model and an incorrectly specified model. In this sense, DFI cutoffs can be thought of as analogous to a custom power analysis (albeit one that is quite simple to conduct).
 
-Secondly, the DFI algorithm is written to return a series of custom cutoff values that range from trivial misfit to substantial misfit. This addresses the second problem of improper interpretation because it encourages researchers to treat misfit as a continuum or a spectrum rather than a binary decision of “good” or “bad”. Because there is less finality associated with an interpretation of model fit when a series of cutoffs are used, the DFI approach also encourages researchers to properly reconceptualize model fit as only one type of validity evidence rather than the crux of validity [@aera_apa_ncme_standards_2014]. As such, if a researcher found evidence of trivial misfit according to the DFI cutoffs, they could still potentially defend the use of their scale if they have other sources of evidence of validity in support of its use (while still acknowledging that if the χ2 test is significant then the model does not exactly fit the data).    
+Secondly, the DFI algorithm is written to return a series of custom cutoff values that range from trivial misfit to substantial misfit. This addresses the second problem of improper interpretation because it encourages researchers to treat misfit as a continuum or a spectrum rather than a binary decision of “good” or “bad”. Because there is less finality associated with an interpretation of model fit when a series of cutoffs are used, the DFI approach also encourages researchers to properly reconceptualize model fit as only one type of validity evidence rather than the crux of validity [@aera_apa_ncme_standards_2014]. As such, if a researcher found evidence of trivial misfit according to the DFI cutoffs, they could still potentially defend the use of their scale if they have other sources of evidence of validity in support of its use (while still acknowledging that if the ${\chi}^2$ test is significant then the model does not exactly fit the data).    
